Fixed results placeholder not showing by only showing when only option available

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -127,6 +127,9 @@
     // This is the placeholder option
     .select2-results__option[aria-disabled="true"]{
         display: none;
+        &:first-child:last-child {
+            display: block;
+        }
     }
 
     .select2-results__option--highlighted,
